2018-12-13  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-1179

	* src/m_sensor.cc (mblock_dlos_gridUniformCircular): Under development.

2018-12-13  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-1178

	* src/methods.cc: Updated text for sensor_responseAntenna.

	* src/m_sensor.cc (sensor_responseAntenna): Small changes of input checks.

	* src/sensor.cc (antenna2d_basic): Function now complete, but not
	yet fully tested.

2018-12-12  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-1177

	* src/m_sensor.cc (sensor_responseAntenna): Some adoptions towards
	finally handling 2D antenna patterns.

	* src/sensor.cc (antenna1d_matrix): Some rearrangement to avoid some
	reinterpolation of antenna pattern.

	(antenna2d_basic): Started on a simple handling of 2D antenna
	patterns. Not ready!

2018-12-10  Simon Pfreundschuh  <simon.pfreundschuh@chalmers.se>

	* arts-2-3-1176

	* 3rdparts/invlib/src/invlib/optimization/levenberg_marquardt.cpp
	- Removed reference to undefined variables.

2018-12-10  Simon Pfreundschuh  <simon.pfreundschuh@chalmers.se>

	* arts-2-3-1176

	* src/m_oem.cc(OEM):
	- Enabled calculation of gain matrix for retrievals that reach
	  iteration or LM-gamma limit.

	* 3rdparts/invlib/src/invlib/optimization/levenberg_marquardt.cpp
	- Slightly modified iteration behavior, requiring a higher, relative
	  cost reduction.

2018-12-07  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-1175
	
	* src/complex.h, src/propagationmatrix.h, src/transmissionmatrix.h:

	Remove constexpr from member functions for ConstComplexVectorView,
	ConstComplexMatrixView, PropagationMatrix, TransmissionMatrix,
	RadiationVector. None of these functions can ever be fully evaluated
	at compile time because their input values depend on runtime values
	such as stokes_dim, number of pressure levels, number of frequencies.
	While newer compilers seem to just ignore the constexpr keyword in