@@ -51,6 +51,7 @@ arts_test_run_ctlfile(slow artscomponents/clearsky/TestBatch.arts)
 
 arts_test_run_ctlfile(fast artscomponents/stokesrot/TestStokesRotation.arts)
 arts_test_run_ctlfile(fast artscomponents/stokesrot/TestSensorPol.arts)
+arts_test_run_ctlfile(fast artscomponents/antenna/TestAntenna2D.arts)
 
 arts_test_run_ctlfile(fast artscomponents/regrid/TestRegrid.arts)
 arts_test_run_ctlfile(fast artscomponents/regrid/TestRegridFields.arts)
