@@ -1,5 +1,17 @@
 2018-12-13  Patrick Eriksson  <patrick.eriksson@chalmers.se>
 
+	* arts-2-3-1180
+
+	* controlfiles/CMakeLists.txt: Added TestAntenna2D.arts as fast.
+
+	* controlfiles/artscomponents/antenna/TestAntenna2D.arts: New.
+
+	* src/m_sensor.cc (mblock_dlos_gridUniformCircular): Finished.
+
+	* src/m_sensor.cc (mblock_dlos_gridUniformRectangular): New WSM.
+
+2018-12-13  Patrick Eriksson  <patrick.eriksson@chalmers.se>
+
 	* arts-2-3-1179
 
 	* src/m_sensor.cc (mblock_dlos_gridUniformCircular): Under development.
